--- a/themes/white-forest/layouts/_default/list.html
+++ b/themes/white-forest/layouts/_default/list.html
@@ -14,13 +14,13 @@
 
     <!-- Fallback to homescreen for Chrome <39 on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Web Starter Kit">
+    <meta name="application-name" content="{{.Title}}">
     <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+    <meta name="apple-mobile-web-app-title" content="{{.Title}}">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -41,16 +41,16 @@
   </head>
   <body>
           <div class="share home-menu">          
-              <a href="http://facebook.com/35sympaty" class="facebook"><i class="fa fa-2x
+              <a href="http://facebook.com/35sympaty" target="_blank" class="facebook"><i class="fa fa-2x
                       fa-facebook-square"></i></a>
 
-              <a href="http://github.com/tonyalaribe" class="github"><i class="fa fa-2x fa-github"></i></a>
+              <a href="http://github.com/tonyalaribe" target="_blank" class="github"><i class="fa fa-2x fa-github"></i></a>
 
-              <a href="http://twitter.com/tonialaribe" class="twitter"><i class="fa fa-2x fa-twitter"></i></a>
+              <a href="http://twitter.com/tonialaribe" target="_blank" class="twitter"><i class="fa fa-2x fa-twitter"></i></a>
 
-              <a href="https://plus.google.com/+AnthonyAlaribe" class="gplus"><i class="fa fa-2x fa-google-plus"></i></a>
+              <a href="https://plus.google.com/+AnthonyAlaribe" target="_blank" class="gplus"><i class="fa fa-2x fa-google-plus"></i></a>
                 
-              <a href="mailto://anthonyalaribe@gmail.com" class=" hire"  >Hire <br/>Me</a>
+              <a href="mailto://anthonyalaribe@gmail.com" target="_blank" class=" hire"  >Hire <br/>Me</a>
 
           </div>
  
