--- a/themes/white-forest/layouts/_default/list.html
+++ b/themes/white-forest/layouts/_default/list.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="">
   <head>
-      {{ $baseurl := .Site.BaseUrl }} 
+      {{ $baseurl := .Site.BaseURL }}
       <base href="{{$baseurl}}">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,69 +33,77 @@
     <!--
     <link rel="canonical" href="http://www.example.com/">
     -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
- 
     <!-- Page styles -->
+    <link rel="stylesheet" href="/styles/tachyons.min.css">
     <link rel="stylesheet" href="/styles/main.css">
 
   </head>
   <body>
-          <div class="share home-menu">          
-              <a href="http://facebook.com/35sympaty" target="_blank" class="facebook"><i class="fa fa-2x
-                      fa-facebook-square"></i></a>
+    <div class="share absolute top-0 right-0 dib  pa1">
+        <a href="http://facebook.com/35sympaty" target="_blank" class="facebook dib pa2">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h2" viewBox="0 0 408.8 408.8"><path d="M353.7 0H55.1C24.7 0 0 24.7 0 55.1v298.6c0 30.4 24.7 55.1 55.1 55.1h147.3l0.3-146.1h-38c-4.9 0-8.9-4-9-8.9l-0.2-47.1c0-5 4-9 9-9h37.9v-45.5c0-52.8 32.2-81.5 79.3-81.5h38.7c4.9 0 9 4 9 9v39.7c0 4.9-4 9-8.9 9l-23.7 0c-25.6 0-30.6 12.2-30.6 30v39.4h56.3c5.4 0 9.5 4.7 8.9 10l-5.6 47.1c-0.5 4.5-4.4 7.9-8.9 7.9h-50.5l-0.3 146.1h87.6c30.4 0 55.1-24.7 55.1-55.1V55.1C408.8 24.7 384.1 0 353.7 0z" fill="#475993"/></svg>
+        </a>
 
-              <a href="http://github.com/tonyalaribe" target="_blank" class="github"><i class="fa fa-2x fa-github"></i></a>
+        <a href="http://github.com/tonyalaribe" target="_blank" class="github dib pa2">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h2" viewBox="0 0 438.5 438.5"><path d="M158.2 352.6c-3 0.6-4.4 2-4 4.3 0.4 2.3 2.1 3 5.1 2.3 3-0.8 4.4-2.1 4-4C162.9 353.1 161.2 352.2 158.2 352.6z"/><path d="M141.9 354.9c-3 0-4.6 1-4.6 3.1 0 2.5 1.6 3.5 4.9 3.1 3 0 4.6-1 4.6-3.1C146.8 355.6 145.1 354.5 141.9 354.9z"/><path d="M119.6 354c-0.8 2.1 0.5 3.5 3.7 4.3 2.9 1.1 4.7 0.6 5.4-1.7 0.6-2.1-0.7-3.6-3.7-4.6C122.2 351.3 120.4 351.9 119.6 354z"/><path d="M414.4 24.1C398.3 8 379 0 356.3 0H82.2C59.6 0 40.2 8 24.1 24.1 8 40.2 0 59.6 0 82.2v274.1c0 22.7 8 42 24.1 58.1 16.1 16.1 35.5 24.1 58.1 24.1h64c4.2 0 7.3-0.1 9.4-0.4 2.1-0.3 4.2-1.5 6.3-3.7 2.1-2.2 3.1-5.4 3.1-9.6 0-0.6 0-7-0.1-19.4 -0.1-12.4-0.1-22.2-0.1-29.4l-6.6 1.1c-4.2 0.8-9.5 1.1-15.8 1 -6.4-0.1-13-0.8-19.8-2 -6.9-1.2-13.2-4.1-19.1-8.6 -5.9-4.5-10.1-10.3-12.6-17.6l-2.9-6.6c-1.9-4.4-4.9-9.2-9-14.6 -4.1-5.3-8.2-8.9-12.4-10.9l-2-1.4c-1.3-1-2.6-2.1-3.7-3.4 -1.1-1.3-2-2.7-2.6-4 -0.6-1.3-0.1-2.4 1.4-3.3 1.5-0.9 4.3-1.3 8.3-1.3l5.7 0.9c3.8 0.8 8.5 3 14.1 6.9 5.6 3.8 10.2 8.8 13.8 14.8 4.4 7.8 9.7 13.8 15.8 17.8 6.2 4.1 12.4 6.1 18.7 6.1s11.7-0.5 16.3-1.4c4.6-1 8.8-2.4 12.8-4.3 1.7-12.8 6.4-22.6 14-29.4 -10.8-1.1-20.6-2.9-29.3-5.1 -8.7-2.3-17.6-6-26.8-11.1 -9.2-5.1-16.9-11.5-23-19.1 -6.1-7.6-11.1-17.6-15-30 -3.9-12.4-5.9-26.7-5.9-42.8 0-23 7.5-42.6 22.6-58.8 -7-17.3-6.4-36.7 2-58.2 5.5-1.7 13.7-0.4 24.6 3.9 10.9 4.3 18.8 8 23.8 11 5 3 9.1 5.6 12.1 7.7 17.7-4.9 36-7.4 54.8-7.4 18.8 0 37.1 2.5 54.8 7.4l10.8-6.9c7.4-4.6 16.2-8.8 26.3-12.6 10.1-3.8 17.8-4.9 23.1-3.1 8.6 21.5 9.3 40.9 2.3 58.2 15 16.2 22.6 35.8 22.6 58.8 0 16.2-2 30.5-5.9 43 -3.9 12.5-8.9 22.5-15.1 30 -6.2 7.5-13.9 13.8-23.1 19 -9.2 5.1-18.2 8.9-26.8 11.1 -8.7 2.3-18.4 4-29.3 5.1 9.9 8.6 14.8 22.1 14.8 40.5v68.2c0 3.2 0.5 5.9 1.4 7.9 1 2 2.5 3.4 4.6 4.1 2.1 0.8 3.9 1.2 5.6 1.4 1.6 0.2 3.9 0.3 7 0.3h64c22.6 0 42-8 58.1-24.1 16.1-16.1 24.1-35.5 24.1-58.1V82.2C438.5 59.6 430.5 40.2 414.4 24.1z"/><path d="M86.8 319.2c-1.3 0.9-1.1 2.5 0.6 4.6 1.9 1.9 3.4 2.2 4.6 0.9 1.3-0.9 1.1-2.5-0.6-4.6C89.5 318.3 87.9 318 86.8 319.2z"/><path d="M77.4 312.1c-0.6 1.3 0.1 2.5 2 3.4 1.5 1 2.8 0.8 3.7-0.6 0.6-1.3-0.1-2.5-2-3.4C79.2 310.9 77.9 311.1 77.4 312.1z"/><path d="M95.6 330.3c-1.7 0.9-1.7 2.7 0 5.1 1.7 2.5 3.3 3.1 4.9 2 1.7-1.3 1.7-3.1 0-5.4C99 329.6 97.4 329 95.6 330.3z"/><path d="M105.6 343.2c-1.7 1.5-1.3 3.3 1.1 5.4 2.3 2.3 4.2 2.6 5.7 0.8 1.5-1.5 1.1-3.3-1.1-5.4C109.1 341.8 107.2 341.5 105.6 343.2z"/></svg>
+        </a>
 
-              <a href="http://twitter.com/tonialaribe" target="_blank" class="twitter"><i class="fa fa-2x fa-twitter"></i></a>
+        <a href="http://twitter.com/tonialaribe" target="_blank" class="twitter dib pa2">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 455.7 455.7" class="h2"><rect width="455.7" height="455.7" fill="#50ABF1"/><path d="M60.4 337.8c30.3 19.2 66.3 30.4 104.9 30.4 108.3 0 196.2-87.8 196.2-196.2 0-2.7-0.1-5.4-0.2-8.1 3.9-3.1 28.2-22.5 34.1-35 0 0-19.7 8.2-38.9 10.1 0 0-0.1 0-0.1 0 0 0 0 0 0.1-0.1 1.8-1.2 26.6-18.1 30-38.2 0 0-13.9 7.4-33.4 13.9 -3.2 1.1-6.6 2.1-10.1 3.1 -12.6-13.4-30.4-21.8-50.2-21.8 -38 0-68.8 30.8-68.8 68.8 0 5.4 0.6 10.6 1.8 15.6 -5.3-0.2-86.2-4.8-141.3-71.4 0 0-32.9 44.9 19.6 91.1 0 0-16-0.6-29.7-8.9 0 0-5.1 54.4 54.4 68.3 0 0-11.7 4.4-30.4 1.3 0 0 10.4 44 63.3 48.1 0 0-41.8 37.7-101.1 28.9L60.4 337.8z" fill="#FFF"/></svg>
+        </a>
 
-              <a href="https://plus.google.com/+AnthonyAlaribe" target="_blank" class="gplus"><i class="fa fa-2x fa-google-plus"></i></a>
-                
-              <a href="mailto://anthonyalaribe@gmail.com" target="_blank" class=" hire"  >Hire <br/>Me</a>
+        <a href="/files/Anthony_Alaribe_resume.pdf" target="_blank" class=" hire dib pa2 lh-title link dark underlined" alt="curriculum vitae (CV), or resume"  >my <br/>Resume</a>
 
-          </div>
- 
-    <header class="header">
-    <div>
-        <h1 class="huge underlined"><a>{{.Title }}</a></h1>
-      <div class="header-about-tags">
-        <small>Programmer</small> |
-        <small>Designer</small> |
-        <small>Scientist</small>
-      </div>
-      <div class="g--half g--centered header-tags">
-          <a style="text-decoration:none" href="{{$baseurl}}">All</a> 
-        {{$data := .Data }}
-        {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-         | <a style="text-decoration:none" href="/tags/{{ $name | urlize }}">{{$name}}</a>
-        {{end}}
-      </div>
     </div>
-    </header>
 
-    <nav class="navdrawer-container promote-layer">
-    </nav>
-
-    <main class="article-list">
-      <br/>
-      <br/>
-      <br/>
-      {{ range .Data.Pages }} 
-      <article>
-          <a href="{{.Permalink}}"><h2 class="xlarge underlined"> {{.Title }}
-              </h2></a>
-        <div class="article-tags">
-            {{ range .Params.tags }} 
-            <a href="/tags/{{ .| urlize }}" >{{.}}</a>
+    <header class="vh-100 flex flex-row items-center justify-center shadow-2">
+      <div class="dib w-100 w-75-m w-60-l tc pa2">
+        {{ if .IsHome }}
+        <div class="tc">
+          <img src="/images/me.png" class="w4 h5-ns w4 w5-ns br-100 ba pa1 "/>
+        </div>
+        {{ end }}
+        <h1 class="f2 f1-ns underlined ma1 dark">{{.Title }}</h1>
+        <div class="mv1 pb3">
+          <small>Programmer</small> |
+          <small>Traveller</small> |
+          <small>Scientist</small>
+        </div>
+        <div class="">
+            <a  href="{{$baseurl}}" class="pv1 ph2 dib link shadow-4 ba bg-green b--green pointer underline-hover f6 black ma1" >All</a>
+          {{$data := .Data }}
+          {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
+           | <a class="pv1 ph2 dib link shadow-4 ba b--light-silver pointer underline-hover f6 black ma1"  href="/tags/{{ $name | urlize }}">{{$name}}</a>
           {{end}}
         </div>
-        <div class="article-content">
-            {{.Summary}}
-        </div><a href="{{.Permalink}}">read more...</a>
-      </article>
-      {{ end }} 
-       
-      
-      
+      </div>
+    </header>
+
+
+    <main class="tc pv5">
+      <section class="dib w-100 w-70-m w-60-l tl pa3">
+        {{ range .Data.Pages }}
+        <article class="pv4 bb bw1 b--light-gray">
+            <h2 class=" underlined dark mv1 f3 f2-ns ">
+              <a href="{{.Permalink}}" class="link dark">{{.Title }}</a>
+            </h2>
+          <div class=" pb3">
+            {{ range .Params.tags }}
+              <a class="pv1 ph2 dib link ba b--light-silver pointer underline-hover f6 black ma1"  href="/tags/{{ . | urlize }}">{{.}}</a>
+            {{end}}
+          </div>
+          <div class="lh-copy f5 f4-ns">
+              {{.Summary}}
+          </div>
+          <div class="tr">
+            <a href="{{.Permalink}}" class="db link dark mv2">read more...</a>
+          </div>
+        </article>
+        {{ end }}
+      </section>
+
+
+
     </main>
     {{ partial "footer.html" }}
     <!-- Built with love using Web Starter Kit -->
