--- a/themes/white-forest/layouts/_default/list.html
+++ b/themes/white-forest/layouts/_default/list.html
@@ -89,7 +89,7 @@
             </h2>
           <div class=" pb3">
             {{ range .Params.tags }}
-              <a class="pv1 ph2 dib link ba b--light-silver pointer underline-hover f6 black ma1"  href="/tags/{{ . | urlize }}">{{.}}</a>
+              <a class="pv1 ph2 dib link ba b--light-silver pointer underline-hover f6 dark link ma1"  href="/tags/{{ . | urlize }}">{{.}}</a>
             {{end}}
           </div>
           <div class="lh-copy f5 f4-ns">
